<?xml version="1.0" encoding="utf-8"?>
<com.zeynelerdi.pastryshop.utils.PSCoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_coordinate_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/home_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/home_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="center|left"
            app:expandedTitleTextAppearance="@style/Base.TextAppearance.AppCompat.Display1"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:scrimVisibleHeightTrigger="1dp"
            app:title="@string/application_name"
            app:titleEnabled="false">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/home_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/home_background"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="#44111111"
                app:layout_collapseMode="parallax" />

            <LinearLayout
                android:id="@+id/header_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/md_activity_horizontal_margin"
                android:layout_marginStart="@dimen/md_activity_horizontal_margin"
                android:orientation="vertical"
                app:layout_collapseMode="parallax">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/shop_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:letterSpacing="0.1"
                    android:text="@string/shop_name"
                    android:textAllCaps="true"
                    android:textAppearance="@style/LargeText.Primary"
                    android:textColor="@android:color/white"
                    android:textSize="40sp"
                    app:fontFamily="@font/noto_sans" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/shop_subtitle_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:letterSpacing="0.1"
                    android:text="@string/shop_subtitle"
                    android:textAllCaps="true"
                    android:textAppearance="@style/MediumText.Secondary"
                    android:textColor="@android:color/white"
                    app:fontFamily="@font/noto_sans"
                    app:layout_collapseMode="parallax" />
            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/home_toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_toolbar_height"
                android:layout_marginTop="@dimen/statusbar_height"
                android:fitsSystemWindows="true"
                android:minHeight="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <!--List to display pages horizontally-->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/home_pages_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/home_cards_list_initial_marin_top"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/item_dashboard_card"
        tools:orientation="horizontal" />

    <!--Container for FAB-->
    <!--Coordinate layout ignores margin while using anchors.-->
    <!--See: https://stackoverflow.com/a/30692574/4690731-->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/spacing_small"
        app:layout_anchor="@id/home_pages_rv"
        app:layout_anchorGravity="top|end">

        <!--Call FAB-->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/phone_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_anti"
            android:layout_marginEnd="@dimen/spacing_small"
            android:src="@drawable/ic_phone"
            app:borderWidth="0dp"
            app:fabSize="normal"
            app:rippleColor="@android:color/darker_gray" />
    </FrameLayout>
</com.zeynelerdi.pastryshop.utils.PSCoordinatorLayout>